--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             Главная страница
         </span>
     </main>
+    <footer>
+        <span>
+            Footer
+        </span>
+    </footer>
     <script src="index.js"></script>
 </body>
 </html>
